Small spacing fix for 'founder' in quali-info

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -612,7 +612,7 @@ padding: 0.2rem 0.2rem 0.2rem 1rem;
 }
 #qualificationCardTitle{
     color: rgb(255, 151, 151);
-    margin: -1.2rem 0rem -2rem 0rem;
+    margin: -1.2rem 0rem 0rem 0rem;
     padding: 0.5rem 0rem 0.5rem 0rem;
     font-size:normal;
     background: transparent;
